...
                  SystemChannels.textInput.invokeMethod('TextInput.hide');
                  Navigator.of(context).pushReplacementNamed('/case/new');
                },
                selected: widget.currentSelected == 2,
              ),
              ListTile(
                key: const Key('btnMenuCaseList'),
                contentPadding: const EdgeInsets.symmetric(horizontal: 6.0),
                leading: const Icon(Icons.enhanced_encryption),
                title: Text(
                  AppLocalizations.of(context).myCases,
                  style: const TextStyle(
                      fontSize: 20, fontWeight: FontWeight.bold),
...
                  SystemChannels.textInput.invokeMethod('TextInput.hide');
                  Navigator.of(context).pushReplacementNamed('/case/list');
                },
                selected: widget.currentSelected == 3,
              ),
              ListTile(
                key: const Key('btnMenuLogout'),
                contentPadding: const EdgeInsets.symmetric(horizontal: 6.0),
                leading: const Icon(Icons.directions_run),
                title: Text(
                  AppLocalizations.of(context).logout,
                  style: const TextStyle(
                      fontSize: 20, fontWeight: FontWeight.bold),
...
