...
                          padding: EdgeInsets.fromLTRB(0.0, 20.0, 0.0, 0.0),
                          child: Text("Dermoapp",
                              style: TextStyle(
                                  fontSize: 40.0, color: Color(0xffdfdfdf))),
                        )),
                    Container(
                        key: const Key('myCasesTitle'),
                        alignment: Alignment.topCenter,
                        child: Padding(
                          padding:
                              const EdgeInsets.fromLTRB(0.0, 0.0, 0.0, 15.0),
                          child: Text(AppLocalizations.of(context).myCases,
                              style: const TextStyle(
...
        ),
        DataCell(
          Text(diagnosticType),
        ),
        DataCell(
          ElevatedButton(
            key: const Key('btnCaseDetails'),
            onPressed: () {
              Navigator.push(
                context,
                MaterialPageRoute(
                    builder: (context) => CaseDetailScreen(caseId)),
              );
...
