...
  "internetNeededToLogin" : "Se necesita una conexión a internet para poder ingresar",
  "version"   : "Versión",
  "submittedData" : "Procesando la información...",
  "thereIsAnError" : "Algo no está bien...",
  "home"      : "Inicio",
  "logout"    : "Salir",
  "welcome"   : "Bienvenid@",
  "newCase"   : "Nuevo caso",
  "createCase" : "Crear consulta",
  "injuryType" : "Tipo de lesión",
  "typeMacula" : "Mácula",
  "typePapula" : "Pápula",
  "typeParche" : "Parche",
...
